tests/invalid_types_assignment/main.oa
main()
{
    1=false;
}